log
Thu, Mar 20, 2025  5:20:41 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:44:57 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:32: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List*)malloc(sizeof(List));
                                ^~~~
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,lista[k]);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
95b9cc4
Thu, Mar 20, 2025  5:46:47 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:32: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List*)malloc(sizeof(List));
                                ^~~~
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,&k);
       ^~~~~~~~~
exercises.c:46:8: error: unused variable 'lista' [-Werror=unused-variable]
    int lista[10] = {1,2,3,4,5,6,7,8,9,10};
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e738d89
